# dataminer-monitor

./: .gitignore  Cargo.toml  README.md  build.rs  build_frontend.bash
api-types/: Cargo.toml
api-types/src/: lib.rs
default-providers/: Cargo.toml
default-providers/src/: lib.rs  notification_providers.rs  status_providers.rs
default-providers/src/notification_providers/: api.rs  email.rs  ntfy.rs  website.rs
default-providers/src/notification_providers/website/: websockets.rs
default-providers/src/status_providers/: dataminer.rs  minecraft.rs  website.rs
frontend/: Cargo.toml
frontend/src/: api.rs  interface.rs  lib.rs
frontend/src/interface/: category.rs  element_status_display.rs  miner_status_display.rs
src/: config.rs  main.rs  notifications.rs  routes.rs  state.rs
src/routes/: api.rs  frontend.rs  websocket.rs
state-management/: Cargo.toml
state-management/src/: lib.rs  notifications.rs  state.rs  state_handle.rs  traits.rs
state-management/src/standard_modules/: dataminer.rs  email_notifier.rs  mod.rs  server.rs  website.rs
state-management/src/state/: notification_provider_wrapper.rs  status_provider_wrapper.rs
static/: index.html  style.css
