[package]
name = "dataminer-status-server"
version = "1.0.0"
edition = "2024"
build = "build.rs"

[features]
e-mail-notifications = ["dep:lettre"]
frontend-file-hot-reload = []

default = ["e-mail-notifications"]

[dependencies]
# core server functionality
rocket = { version = "0.5.1", features = ["json"] }
tokio = "1.47.1"
chrono = { version = "0.4.41", features = ["serde"] }
# frontend
api-types = { path = "api-types" }
ws = { version = "0.1.1", package = "rocket_ws" }

# configurability
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"

# notification service
lettre = { version = "0.11.18", optional = true }
