[package]
name = "dataminer-status-server"
version = "2.0.0"
edition = "2024"
build = "build.rs"

[features]

e-mail-notifications = ["state-management/e-mail-notifications"]
dataminer-status-source = ["state-management/dataminer-status-source"]
server-status-source = ["state-management/server-status-source"]
frontend-website = ["state-management/frontend-website"]
frontend-websocket = ["state-management/frontend-websocket"]

all-notifications = ["state-management/all-notifications", "e-mail-notifications", "frontend-website", "frontend-websocket"]
all-data-sources = ["state-management/all-data-sources", "dataminer-status-source", "server-status-source"]

default = ["state-management/default", "all-notifications", "all-data-sources"]

[dependencies]
# core server functionality
rocket = { version = "0.5.1", features = ["json"] }
state-management = { path = "state-management", default-features = false }
