[package]
name = "dataminer-status-server"
version = "2.0.0"
edition = "2024"
#build = "build.rs"

[features]

e-mail-notifications = ["default-providers/email-notification-provider"]
dataminer-status-source = ["default-providers/dataminer-status-provider"]
server-status-source = ["default-providers/website-status-provider"]
minecraft-server-status-source = ["default-providers/minecraft-status-provider"]
frontend-website = ["default-providers/website-notification-provider"]
frontend-websocket = ["default-providers/api-notification-provider-websockets"]

all-notifications = ["e-mail-notifications", "frontend-website", "frontend-websocket"]
all-data-sources = ["dataminer-status-source", "server-status-source", "minecraft-server-status-source"]

default = ["state-management/default", "all-notifications", "all-data-sources", "default-providers/logging", "default-providers/website-notification-provider-hot-reload"]

[dependencies]
# core server functionality
rocket = { version = "0.5.1", features = ["json"] }
state-management = { path = "state-management", default-features = false }
default-providers = { path = "default-providers", features = ["all-provider"] }
