[package]
name = "frontend"
version = "2.0.0"
authors = ["Schatten2020"]
repository = "https://github.com/Schatten2021/dataminer-monitor"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
# core WASM dependencies
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.104"
web-sys = { version = "0.3.77", features = ["console", "Window", "Document", "Element"] }
# networking
api-types = { path = "../api-types" }
gloo-net = "0.6.0"
wasm-bindgen-futures = "0.4.54"
serde_json = "1.0.143"
# framework
yew = { version = "0.21.0", features = ["csr"] }

# util
serde = "1.0.219"
chrono = "0.4.41"
futures-util = "0.3.31"
