[package]
name = "state-management"
version = "1.0.0"
edition = "2024"

[features]
serde-traits = ["serde/derive"]
rocket-integration = ["dep:rocket"]

default = ["rocket-integration"]

[dependencies]
parking_lot = "0.12.5"
toml = "0.9.8"
serde = "1.0.228"
rocket = { version = "0.5.1", optional = true }
chrono = "0.4.42"
